# Strata-Platform

./: .gitignore  MAIN_BRANCH_PROTECTION.md  main-branch-protection.json  pyproject.toml  run_mineral_district.py  run_shadrd_realdata.py  run_waterquality_profile.py
app/: streamlit_app.py
strata-platform/: LICENSE  METHODS.md  README.md  demo.py  requirements.txt  run_tn_basin.py
strata-platform/.streamlit/: config.toml
strata-platform/strata/: __init__.py
strata-platform/strata/sectors/energy/: __init__.py
strata-platform/strata/sectors/minerals/: catalog.py
strata-platform/strata/sectors/supply/: __init__.py  commodities.py
strata-platform/strata/shadrd/: __init__.py  imagery.py  realdata.py  spatial_cv.py
strata-platform/strata/viz/: __init__.py  plots.py
strata-platform/tests/: test_sectors.py
strata/sectors/energy/: siting.py
strata/sectors/minerals/: __init__.py  monitoring.py  prospectivity.py
strata/sectors/supply/: gap.py
strata/shadrd/: features.py  indices.py  model.py
strata/viz/: maps.py
tests/: test_engine.py
