[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "strata-platform"
version = "0.1.0"
description = "Strategic Terrain & Resource Analytics - cross-sector geospatial ML on the SHAD-RD engine"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Stefani D. W. Yates" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "lightgbm>=4.0",
    "matplotlib>=3.7",
    "folium>=0.16",
    "streamlit>=1.30",
    "requests>=2.31",
]

[project.optional-dependencies]
workstation = ["pystac-client>=0.7", "stackstac>=0.5", "rasterio>=1.3",
               "terratorch>=1.0", "torch>=2.2"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["strata*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:X does not have valid feature names:UserWarning",
]
